- Clear Sky Loadouts: Overhaul.
CSky done, next military likely.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -149,7 +149,7 @@ wpn_protecta = true,1,750
 wpn_toz34 = true,1,650,2
 wpn_toz106_m1 = true,1,450
 wpn_bm16 = true,1,375
-wpn_sig220_n = true,1,275
+wpn_sig226 = true,1,275
 wpn_tt33_modern = true,1,200
 
 novice_outfit = true,1,50
@@ -379,9 +379,12 @@ wpn_knife = false,1,0
 device_pda_1 = false,1,0
 itm_backpack = false,1,0
 
-helm_resp = true,1,50 
+helm_cloth_mask = true,1,5
+helm_rp_bala = true,1,10
+helm_resp = true,1,50
+helm_respirator_old = true,1,250
 
-wpn_k98 = true,1,1050
+wpn_adar2_15 = true,1,1050,2
 wpn_winchester1873 = true,1,600
 wpn_mp5 = true,1,500
 wpn_vz61 = true,1,375
@@ -390,7 +393,7 @@ wpn_toz106_m1 = true,1,375
 wpn_usp = true,1,250
 
 wpn_beretta_modern = true,1,200
-wpn_fn57 = true,1,325
+wpn_mp412 = true,1,325
 
 cooking = true,1,25
 yadylin = true,2,50
