--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts__name.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts__name.ltx
@@ -52,8 +52,8 @@ wpn_m4_tac:4:r           ;wpn_m4
 wpn_spas12_custom:r:r
 
 [blackops_secondary]
-wpn_sig220_n:4:1         ;wpn_sig220
-wpn_sig220_n_upg220:4:r  ;wpn_sig220_custom
+wpn_sig226:4:1         ;wpn_sig220
+wpn_sig226_upg220:4:r  ;wpn_sig220_custom
 wpn_usp_match:4:r        ;wpn_usp
 wpn_fn57:4:r
 
