--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
@@ -166,8 +166,8 @@ wpn_ithacam37_trench:0:3:25
 [freedom_professional_secondary]
 
 wpn_sig226:r:0
-wpn_sig220_n:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
+wpn_sig226:r:0
 wpn_walther_p99:0:0
 wpn_beretta_modern:0:0
 wpn_fnp45:r:0:5
@@ -203,8 +203,8 @@ wpn_spas12:0:3
 [freedom_expert_secondary]
 
 wpn_sig226:r:0
-wpn_sig220_n:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
+wpn_sig226:r:0
 wpn_walther_p99:0:0
 wpn_fnp45:r:0:5
 wpn_fnp45:r:0:5
@@ -241,7 +241,7 @@ wpn_spas12:0:3
 
 wpn_sig226:r:0
 wpn_walther_p99:0:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
 wpn_fnp45:r:0:5
 wpn_pl15:0:0
 
@@ -278,8 +278,8 @@ wpn_spas12:0:3
 
 wpn_sig226:r:0
 wpn_walther_p99:0:0
-wpn_sig220_n:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
+wpn_sig226:r:0
 wpn_fnp45:r:0:5
 wpn_fnp45:r:0:5
 wpn_pl15:0:0
@@ -317,8 +317,8 @@ wpn_saiga12s_isg:4:6:70
 
 wpn_sig226:r:0
 wpn_walther_p99:0:0
-wpn_sig220_n:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
+wpn_sig226:r:0
 wpn_fnp45:r:0:5
 wpn_fnp45:r:0:5
 wpn_pl15:0:0
