--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
@@ -463,7 +463,7 @@ wpn_glock:0:0
 wpn_beretta_modern:0:0
 wpn_walther_p99:0:0
 wpn_walther_p99:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
 wpn_sig226:0:0
 wpn_usp_match:0:0
 wpn_fn57:0:0
@@ -613,7 +613,7 @@ wpn_glock:r:0
 wpn_beretta_modern:r:0
 wpn_walther_p99:r:0
 wpn_walther_p99:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
 wpn_sig226:r:0
 wpn_usp_match:r:0
 wpn_fnp45:r:0
@@ -716,7 +716,7 @@ wpn_glock:r:0
 wpn_beretta_modern:r:0
 wpn_walther_p99:r:0
 wpn_walther_p99:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
 wpn_sig226:r:0
 wpn_usp_match:r:0
 wpn_fnp45:r:0
