--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
@@ -95,7 +95,7 @@ wpn_glock_modern:0:0:25
 wpn_beretta_modern:0:0
 wpn_walther_p99:0:0
 wpn_walther_p99:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
 wpn_sig226:0:0
 wpn_usp_match:0:0
 
