--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
@@ -58,7 +58,7 @@ wpn_toz106_m1:0:0
 wpn_toz34_obrez:0:0
 
 [ecolog_novice_secondary]
-wpn_sig220_n:0:0
+wpn_sig226:0:0
 wpn_tt33_modern:0:0
 wpn_pm_custom:0:0
 
@@ -82,7 +82,7 @@ wpn_toz34_obrez:0:0
 wpn_toz34_obrez:0:0
 
 [ecolog_trainee_secondary]
-wpn_sig220_n:0:0
+wpn_sig226:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
 wpn_pm_custom:0:0
@@ -110,8 +110,8 @@ wpn_toz106_m1:0:0
 wpn_toz34_obrez:0:0
 
 [ecolog_experienced_secondary]
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
 wpn_colt1911:0:0
@@ -139,9 +139,9 @@ wpn_mp133:0:3
 wpn_mp133:0:3
 
 [ecolog_professional_secondary]
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
 wpn_colt1911:0:0
 wpn_colt1911:0:0
 wpn_mp443:0:0
@@ -176,9 +176,9 @@ wpn_mp133:0:3
 wpn_mp133:0:3
 
 [ecolog_veteran_secondary]
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
 wpn_mp443:0:0
 wpn_mp443:0:0
 wpn_mp443:0:0
@@ -221,9 +221,9 @@ wpn_spas12:0:3:50
 wpn_mp153_m1:0:3
 
 [ecolog_expert_secondary]
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
 wpn_mp443:0:0
 wpn_mp443:0:0
 wpn_mp443:0:0
@@ -263,8 +263,8 @@ wpn_mp153_m1:0:3
 wpn_mp153_m1:0:3
 
 [ecolog_master_secondary]
-wpn_sig220_n:0:0
-wpn_sig220_n:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
 wpn_mp412:0:0
 wpn_mp443:0:0
 wpn_mp443:0:0
@@ -302,7 +302,7 @@ wpn_saiga12s_isg:0:3:50
 wpn_mp153_m1:0:3
 
 [ecolog_legend_secondary]
-wpn_sig220_n:0:0
+wpn_sig226:0:0
 wpn_mp412:0:0
 wpn_mp443:0:0
 wpn_oc33:0:0
