- Military: Overhaul Loadouts.
This marks the main 8 story factions being somewhat complete. I think. I can't really remember in all honesty.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -301,19 +301,22 @@ merc_wolven_outfit = true,1,600
 army_patch = false,1,0
 wpn_knife2 = false,1,0
 device_pda_1 = false,1,0
-itm_backpack = false,1,0
+equ_small_pack = false,1,0
 
-helm_respirator_old = true,1,50 
+helm_cloth_mask = true,1,5
+helm_rp_bala = true,1,10
+helm_resp = true,1,15
+helm_respirator_old = true,1,50
 
-wpn_sks_b = true,1,1000,1
-wpn_mosin = true,1,1050
+wpn_ak74u_n1 = true,1,1000,1
+wpn_sks_b = true,1,850,2
 wpn_vityaz = true,1,500
 wpn_bizon = true,1,400
 wpn_kiparis = true,1,300
-wpn_toz34_obrez = true,1,550,2
+wpn_wincheaster1300 = true,1,550
 wpn_toz106_m1 = true,1,375
-wpn_aps = true,1,200
-wpn_colt1911 = true,1,200
+wpn_pb_custom = true,1,200
+wpn_tt33_modern = true,1,125
 wpn_pm_custom = true,1,125
 
 yadylin = true,2,50
@@ -328,8 +331,7 @@ vodka = true,2,150
 cigarettes_russian = true,2,30
 drug_booster = true,1,250
 
-army_outfit = true,1,50
-
+army_outfit = true,1,35
 
 [monolith_loadout]:shared
 monolith_patch = false,1,0
