--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_army.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_army.ltx
@@ -1,328 +1,255 @@
 
 [army]:stalker
 
-[army_novice]:stalker_novice
+[army_novice]:army
 primary = army_novice_primary
-; secondary = army_experienced_secondary
+secondary = army_novice_secondary
+extra = extras_novice
 
-[army_experienced]:stalker_experienced
+[army_trainee]:army
+primary = army_trainee_primary
+secondary = army_trainee_secondary
+extra = extras_trainee
+
+[army_experienced]:army
 primary = army_experienced_primary
 secondary = army_experienced_secondary
+extras = extras_experienced
 
-[army_veteran]:stalker_veteran
+[army_professional]:army
+primary = army_professional_primary
+secondary = army_professional_secondary
+extras = extras_professional
+
+[army_veteran]:army
 primary = army_veteran_primary
 secondary = army_veteran_secondary
-extra = army_veteran_extra
+extra = extras_veteran
 
-[army_master]:stalker_master
+[army_expert]:army
+primary = army_expert_primary
+secondary = army_expert_secondary
+extras = extras_expert
+
+[army_master]:army
 primary = army_master_primary
 secondary = army_master_secondary
+extras = extras_master
 
-[army_trainee]:army_novice
-
-[army_professional]:army_experienced
-
-[army_expert]:army_veteran
-
-[army_legend]:army_master
+[army_legend]:army
+primary = army_legend_primary
+secondary = army_legend_secondary
+extras = extras_legend
 
 ;----------------------------------------------------
+
 [army_novice_primary]
-wpn_vityaz:0:6
-wpn_vityaz:0:0
-wpn_vityaz:0:0
+
 wpn_bizon:0:6
-wpn_bizon:0:0
-wpn_bizon:0:0
+wpn_vityaz:0:6
 wpn_kiparis:0:6
-wpn_kiparis:0:0
-wpn_kiparis:0:0
 
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_ak74_n:0:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
+wpn_sks_b:r:0
 wpn_ak74u_n1:0:6
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
 
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_val:0:0:30
+wpn_wincheaster1300:0:3
 
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
+[army_novice_secondary]
 
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+
+[army_trainee_primary]
+
+wpn_bizon:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+
+wpn_sks_b:r:0 
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_akm_bas:0:0
+
+wpn_wincheaster1300:0:3
+
+[army_trainee_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_mp443:0:0
 
 [army_experienced_primary]
-wpn_ash12:r:0:25
 
-wpn_vityaz:0:6
-wpn_vityaz:0:0
-wpn_vityaz:0:0
 wpn_bizon:0:6
-wpn_bizon:0:0
-wpn_bizon:0:0
+wpn_vityaz:0:6
 wpn_kiparis:0:6
-wpn_kiparis:0:0
-wpn_kiparis:0:0
 
-wpn_akm_bas:0:3
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_ak74m_n:0:6
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:0:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
+wpn_sks_tac:r:0 
 wpn_ak74u_n1:0:6
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:r:6
-wpn_ak74u_tac:0:0
-wpn_ak105:r:6
-wpn_ak105:0:0
-wpn_ak105:0:0
-wpn_ak12_m1:0:0
-wpn_ak12_m1:0:0
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_ak74_n:0:6
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_sv98:0:0
 
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-
-wpn_saiga12s_m2:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
+wpn_wincheaster1300:0:3
 
 [army_experienced_secondary]
+
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
 wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
+
+[army_professional_primary]
+
+wpn_bizon:0:6
+wpn_pp2000:0:6
+
+wpn_sks_tac:r:0 
+wpn_ak74u_tac:0:6
+wpn_ak74u_tac:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_abakan_n:r:0:50
+wpn_sv98:0:0
+wpn_val:0:0
+
+wpn_mp133:0:3
+
+[army_professional_secondary]
+
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_mp443:0:0
 
 [army_veteran_primary]
-wpn_dvl10:4:0
 
-wpn_sks_tac:r:0
+wpn_pp2000:0:6
+
+wpn_ak74u_tac:0:6
 wpn_ak74m_n:r:6
-wpn_abakan_n:r:0:50
-wpn_ak12_m1:r:0
-wpn_rpk74_16:0:3:60
-wpn_rpk:0:0
-wpn_ak103:r:0
-wpn_ash12:0:3
-wpn_ash12:0:0
-wpn_pp2000:r:0
-wpn_pp2000:r:0
-wpn_sv98:0:0
-wpn_svd_m1:0:0
-wpn_svd_m1:0
-wpn_svd_m1:0
-wpn_rpk:0:0
-wpn_val:0:0
-wpn_val:0:0
-wpn_abakan_n:r:0
-
-wpn_akm_bas:0:3
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_ak74m_n:0:6
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74u_n1:r:6
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:r:6
-wpn_ak74u_tac:0:0
+wpn_ak74m_n:r:6
 wpn_ak105:r:6
-wpn_ak105:0:0
-wpn_ak105:0:0
-
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-
-wpn_akm_bas:0:3
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
 wpn_akm_bas:0:0
 wpn_akm_bas:0:0
-wpn_ak74m_n:0:6
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:0:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74u_n1:0:6
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:0:6
-wpn_ak74u_tac:0:0
-
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_vihr:0:3
-
-wpn_saiga12s_m2:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
-wpn_ks23:0:0
-
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
-
-wpn_pkm_siber:r:0
-
-[army_master_primary]
-wpn_dvl10:4:3
-wpn_ak103:4:6:15
-wpn_akm_alfa:4:6:15
-wpn_svd_m1:3
-wpn_svds_pmc:r:3:10
-wpn_svd_m1:3
-wpn_svd_m1:3
-
-wpn_sks_tac:r:0
-wpn_ak74m_n:r:6
 wpn_abakan_n:r:0:50
-wpn_ak12_m1:r:0
-wpn_ak12_m1:r:6
-wpn_ak12_m1:r:6
-wpn_rpk74_16:0:3:60
-wpn_rpk:0:0
-wpn_ash12:0:3
-wpn_ash12:0:0
-wpn_pp2000:r:0
-wpn_pp2000:r:0
-wpn_sv98:0:0
-wpn_svd_m1:0:0
-wpn_rpk:0:0
-
-wpn_akm_bas:0:3
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_ak74m_n:0:6
-wpn_ak74m_n:0:6
-wpn_ak74m_n:0:0
-wpn_ak74_n:0:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74u_n1:0:6
-wpn_ak74u_n1:0:6
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:0:6
-wpn_ak74u_tac:0:6
-wpn_abakan_n:0:0
-
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:3
+wpn_abakan_n:r:0:50
 wpn_val:0:0
-wpn_val:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
 wpn_vihr:0:3
-wpn_vihr:0:3
+wpn_groza:0:0
 
-wpn_ks23:0:1
-wpn_saiga12s_m2:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
+wpn_rpk:0:0
 wpn_pkm_siber:r:0:50
 wpn_pkp_siber:r:0:50
 
+wpn_sv98:0:0
+wpn_svd_m1:0:0
+
+wpn_mp133:0:3
 
 [army_veteran_secondary]
+
+wpn_gsh18:0:0
 wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
+
+[army_expert_primary]
+
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak104_alfa:0:0
+wpn_abakan_n:r:0:50
+wpn_abakan_n:r:0:50
+wpn_ash12:0:3
+wpn_vihr:0:3
+wpn_vihr:0:3
+wpn_groza:0:0
+wpn_groza:0:0
+wpn_rpk:0:0
+
+wpn_sv98:0:0
+wpn_svds:0:0
+
+wpn_mp153:0:3
+
+[army_expert_secondary]
+
 wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_mp443:0:0
+
+[army_master_primary]
+
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak104_alfa:0:0
+wpn_ak104_alfa:0:0
+wpn_abakan_n:r:0:50
+wpn_abakan_n:r:0:50
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_groza:0:0
+wpn_groza:0:0
+
+wpn_rpk74_16:0:3:60
+wpn_pkm_siber:r:0:50
+wpn_pkp_siber:r:0:50
+
+wpn_sv98:0:0
+wpn_svds:0:0
+
+wpn_mp153:0:3
+wpn_ks23:0:1
 
 [army_master_secondary]
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
 
-[army_veteran_extra]
-grenade_f1:0:1:2
+wpn_gsh18:0:0
+wpn_mp443:0:0
+
+[army_legend_primary]
+
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak104_alfa:0:0
+wpn_ak104_alfa:0:0
+wpn_ak104_alfa:0:0
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_groza:0:0
+wpn_groza:0:0
+
+wpn_rpk74_16:0:3:60
+
+wpn_svds_pmc:0:0
+
+wpn_mp153:0:3
+wpn_ks23:0:1
+wpn_saiga12s_m2:0:3
+
+[army_legend_secondary]
+
+wpn_gsh18:0:0
+wpn_mp443:0:0
