- Monolith: Overhaul Loadout.
Substantially decreased in line count, woo. No more ak74_alt drops and such too, nor novices running around with Ash-12s.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -339,16 +339,17 @@ wpn_knife7 = false,1,0
 device_pda_2 = false,1,0
 equ_small_pack = false,1,0
 
+helm_cloth_mask = true,1,5
+helm_rp_bala = true,1,10
+helm_resp = true,1,15
 helm_ranger = true,1,50 
 
-wpn_sks_b = true,1,1000,1
-wpn_mosin = true,1,1050
-wpn_vintorez_n1 = true,1,1000
+wpn_ak12_custom = true,1,700,1
+wpn_mosin = true,1,850
+wpn_sks_b = true,1,900
 wpn_pp2000 = true,1,500
 wpn_kiparis = true,1,300
-wpn_toz34_obrez = true,1,550,2
 wpn_toz106_m1 = true,1,375
-wpn_aps = true,1,200
 wpn_colt1911 = true,1,200
 wpn_pm_custom = true,1,125
 wpn_beretta_modern = true,1,200
@@ -370,10 +371,8 @@ brewed_coffee = true,2,85
 ration_ukr = true,1,200,2
 vodka = true,3,120
 
-monolith_outfit = true,1,50
+monolith_nbc_outfit = true,1,50
 monolith_trenchcoat_outfit = true,1,400
-
-wpn_ak12_custom = true,1,700,1
 
 [csky_loadout]:shared
 csky_patch = false,1,0
