--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_army.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_army.ltx
@@ -184,7 +184,7 @@ wpn_rpk:0:0
 wpn_sv98:0:0
 wpn_svds:0:0
 
-wpn_mp153:0:3
+wpn_mp153_m1:0:3
 
 [army_expert_secondary]
 
@@ -216,7 +216,7 @@ wpn_pkp_siber:r:0:50
 wpn_sv98:0:0
 wpn_svds:0:0
 
-wpn_mp153:0:3
+wpn_mp153_m1:0:3
 wpn_ks23:0:1
 
 [army_master_secondary]
@@ -245,7 +245,7 @@ wpn_rpk74_16:0:3:60
 
 wpn_svds_pmc:0:0
 
-wpn_mp153:0:3
+wpn_mp153_m1:0:3
 wpn_ks23:0:1
 wpn_saiga12s_m2:0:3
 
