--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_dolg.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_dolg.ltx
@@ -281,7 +281,7 @@ wpn_groza_nimble:r:6
 wpn_ak12_m1:0:0
 wpn_pkm_siber:r:0:65
 
-wpn_mp153:0:3
+wpn_mp153_m1:0:3
 wpn_mp133:0:3
 wpn_saiga12s_m2:0:3
 
@@ -316,7 +316,7 @@ wpn_groza_nimble:r:6
 wpn_ak12_m1:0:0
 wpn_pkm_siber:r:0:65
 
-wpn_mp153:0:3
+wpn_mp153_m1:0:3
 wpn_mp133:0:3
 wpn_saiga12s_isg:r:6:8
 
