--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
@@ -1,733 +1,343 @@
+[monolith]:stalker
 
-[monolith_novice]:stalker_novice
+[monolith_novice]:monolith
 primary = monolith_novice_primary
-secondary = monolith_veteran_secondary
+secondary = monolith_novice_secondary
+extra = extras_novice
 
-[monolith_experienced]:stalker_experienced
+[monolith_trainee]:monolith
+primary = monolith_trainee_primary
+secondary = monolith_trainee_secondary
+extra = extras_trainee
+
+[monolith_experienced]:monolith
 primary = monolith_experienced_primary
-secondary = monolith_veteran_secondary
+secondary = monolith_experienced_secondary
+extras = extras_experienced
 
-[monolith_veteran]:stalker_veteran
+[monolith_professional]:monolith
+primary = monolith_professional_primary
+secondary = monolith_professional_primary
+extras = extras_professional
+
+[monolith_veteran]:monolith
 primary = monolith_veteran_primary
 secondary = monolith_veteran_secondary
-extra = monolith_veteran_extra
+extra = extras_veteran
 
-[monolith_master]:stalker_master
+[monolith_expert]:monolith
+primary = monolith_expert_primary
+secondary = monolith_expert_secondary
+extras = extras_expert
+
+[monolith_master]:monolith
 primary = monolith_master_primary
 secondary = monolith_master_secondary
+extras = extras_master
 
-[monolith_trainee]:monolith_novice
-
-[monolith_professional]:monolith_experienced
-
-[monolith_expert]:monolith_veteran
-
-[monolith_legend]:monolith_master
+[monolith_legend]:monolith
 primary = monolith_legend_primary
 secondary = monolith_legend_secondary
+extras = extras_legend
 
 ;----------------------------------------------------
+
 [monolith_novice_primary]
-wpn_toz34_mark4_23:0:3
-wpn_sv98:0:3
-wpn_svd_m1:3
-wpn_svd_m1:3
-wpn_k98_mod:0:0:25
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:0:3
 
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-
-wpn_akm_bas:0:r
-wpn_akm_bas:0:r
-wpn_akm_bas:0:3
-wpn_akm_bas:r:3
-wpn_akm_bas:0:3
-wpn_akm_bas:0:r
-wpn_akm_bas:r:3
-wpn_akm_bas:r:r
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_sks_molot:0:3
-wpn_sks_molot:0:3
-wpn_sks_tac:0:3
-wpn_sks_tac:0:3
-wpn_ak103:0:3
-wpn_ak103:0:3
-
-wpn_ak74_alt:r:6
-wpn_ak74_alt:4:6
-wpn_ak74_alt:0:6
-wpn_ak74_custom:r:6
-wpn_ak74_custom:4:6
-wpn_ak74_custom:0:6
-wpn_ak12_custom:r:6
-wpn_ak12_custom:0:6
-wpn_ak74_n:r:6
-wpn_ak74u_n1:r:6
-wpn_ak74_n:r:6
-wpn_ak74u_n1:r:6
-wpn_ak74_n:r:6
-wpn_ak74u_n1:r:6
-wpn_ak74u_tac:r:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:0:6
-wpn_ak105:r:6
-wpn_ak105:0:6
-
-wpn_sig550:r:6:10
-wpn_m4a1_siber:r:6:10
-wpn_ak101:0:6
-wpn_ak101:r:6
-wpn_ak101:4:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_ak5c_bas:0:6
-wpn_ak5c_bas:r:6
-wpn_aug_modern:0:6
-wpn_aug_modern:r:6
-wpn_aug_modern:4:6
-wpn_aug_merc:0:6
-wpn_aug_merc:r:6
-wpn_aug_merc:4:6
-wpn_g36ka4_rwap:r:6:50
-wpn_g36ka4_rwap:r:6:50
-wpn_l85_m2:0:6
-wpn_l85_m2:r:6
-wpn_l85_m2:4:6
-wpn_sig550:0:6
-wpn_sig550:r:6
-wpn_sig550:4:6
-wpn_sig552:0:6
-wpn_sig552:r:6
-wpn_sig552:4:6
-
-wpn_pp2000:r:6
-wpn_pp2000:r:6
-wpn_pp2000:r:6
-wpn_mp5:4:6
-wpn_mp5:4:6
-wpn_mp5:r:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:r:6
-wpn_mp5sd_custom:r:6
-wpn_vz61:r:6
-wpn_vz61:r:6
-wpn_vityaz:r:6
-wpn_vityaz:r:6
+wpn_bizon:0:6
 wpn_vityaz:0:6
-wpn_kiparis:r:6
-wpn_kiparis:1:6
-wpn_kiparis:2:6
+wpn_kiparis:0:6
+wpn_mp5:0:6
 
-wpn_9a91:r:3
-wpn_9a91:4:3
-wpn_9a91:0:3
-wpn_9a91:r:3
-wpn_9a91:4:3
-wpn_9a91:0:3
-wpn_vintorez_n1:r:3
-wpn_vintorez_n1:4:3
-wpn_vintorez_n1:4:3
-wpn_vintorez_n1:0:3
-wpn_groza:0:3
-wpn_groza:r:3
-wpn_groza:4:3
-wpn_groza:4:3
-
-wpn_remington870:0:6
-wpn_remington870:0:6
-wpn_mp133:0:6
-wpn_wincheaster1300:0:6
-wpn_wincheaster1300:0:6
-wpn_wincheaster1300:0:6
-wpn_wincheaster1300:0:6
-wpn_wincheaster1300:0:6
-wpn_spas12:0:6
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_ithacam37_trench:0:6
-wpn_ithacam37_trench:0:6
-wpn_ithacam37_trench:0:6
-
-wpn_adar2_15:0:6
+wpn_sks_b:r:0
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_svd_m1:r:3
 wpn_adar2_15:r:6
+wpn_mosin:r:0
+
+wpn_wincheaster1300:0:3
+wpn_remington870:0:3
+wpn_toz106_m1:0:3
+
+[monolith_novice_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+
+[monolith_trainee_primary]
+
+wpn_bizon:0:6
+wpn_vityaz:0:6
+wpn_mp5:0:6
+
+wpn_sks_b:r:0
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_ak74_n:0:6
+wpn_svd_m1:r:3
+wpn_adar2_15:r:6
+wpn_mosin:r:0
+wpn_k98_mod:0:0
+
+wpn_mp133:0:6
+wpn_wincheaster1300:0:3
+wpn_remington870:0:3
+wpn_toz106_m1:0:3
+
+[monolith_trainee_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:r:0
+wpn_beretta_modern:r:0
+wpn_colt1911:r:0
+wpn_walther_p99:r:0
 
 [monolith_experienced_primary]
-wpn_k98_mod:0:0
-wpn_sv98:0:3
-wpn_svd_m1:3
-wpn_svd_m1:3
-wpn_remington700:0:0
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:0:3
 
-wpn_ash12:r:3
+wpn_bizon:0:6
+wpn_mp5sd_custom:0:6
 
-wpn_pp2000:4:0
-wpn_pp2000:4:0
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-wpn_mp7:r:3
-wpn_ump45:r:3
-wpn_mp5_nimble:r:0:25
-
-wpn_akm_bas:0:r
-wpn_akm_bas:0:r
-wpn_akm_bas:0:3
-wpn_akm_bas:r:3
-wpn_akm_bas:0:3
-wpn_akm_bas:0:r
-wpn_akm_bas:r:3
-wpn_akm_bas:r:r
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_sks_molot:0:3
-wpn_sks_molot:0:3
-wpn_sks_tac:0:3
-wpn_sks_tac:0:3
-wpn_ak103:0:3
-wpn_ak103:0:3
-
-wpn_sig550:r:6:20
-wpn_m4a1_siber:r:6:20
-wpn_ak101:0:6
-wpn_ak101:r:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_m4a1_siber:4:6
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_ak5c_bas:0:6
-wpn_ak5c_bas:r:6
-wpn_aug_modern:0:6
-wpn_aug_modern:r:6
-wpn_aug_modern:4:6
-wpn_aug_merc:0:6
-wpn_aug_merc:r:6
-wpn_aug_merc:4:6
-wpn_g36ka4_rwap:r:6:50
-wpn_g36ka4_rwap:r:6:50
-wpn_l85_m2:0:6
-wpn_l85_m2:r:6
-wpn_l85_m2:4:6
-wpn_sig550:0:6
-wpn_sig550:r:6
-wpn_sig550:4:6
-wpn_sig552:0:6
-wpn_sig552:r:6
-wpn_sig552:4:6
-
-wpn_abakan_n:4:6
-wpn_abakan_n:4:6
-wpn_abakan_n:4:6:25
-wpn_abakan_n:4:6:25
-wpn_rpk74_16:4:6:70
-wpn_rpk74_16:4:6:70
-wpn_ak74m_n:4:6
-wpn_ak74m_n:4:6
-wpn_ak105:r:6
-wpn_ak105:0:6
-wpn_ak105:4:6
-wpn_ak74m_n:0:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:4:6
-wpn_ak74m_n:0:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:4:6
-wpn_ak74u_n1:4:6
-wpn_ak74u_n1:r:6
+wpn_sks_molot:r:3
 wpn_ak74u_n1:0:6
-wpn_ak74u_tac:r:6
-wpn_ak74u_tac:0:6
+wpn_ak74u_n1:0:6
 wpn_ak74_n:0:6
-wpn_ak74_n:r:6
-wpn_ak74_n:4:6
-wpn_ak12_custom:r:6
-wpn_ak12_custom:0:6
-wpn_ak12_custom:0:6
-wpn_ak12_custom:r:6
-wpn_ak12_custom:r:6
-
-wpn_pp2000:r:6
-wpn_pp2000:r:6
-wpn_pp2000:r:6
-wpn_mp5:4:6
-wpn_mp5:4:6
-wpn_mp5:r:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:r:6
-wpn_mp5sd_custom:r:6
-wpn_vz61:r:6
-wpn_vz61:r:6
-wpn_vityaz:r:6
-wpn_vityaz:r:6
-wpn_vityaz:0:6
-wpn_kiparis:r:6
-wpn_kiparis:1:6
-wpn_kiparis:2:6
-
-wpn_9a91:r:3
-wpn_9a91:4:3
-wpn_9a91:0:3
-wpn_9a91:r:3
-wpn_9a91:4:3
-wpn_9a91:0:3
-wpn_vintorez_n1:r:3
-wpn_vintorez_n1:4:3
-wpn_vintorez_n1:4:3
-wpn_vintorez_n1:4:3
-wpn_vintorez_n1:0:3
-wpn_groza:0:3
-wpn_groza:r:3
-wpn_groza:4:3
-wpn_groza:0:3
-wpn_groza:r:3
-wpn_groza:4:3
-
-wpn_remington870:0:6
-wpn_mp133:0:6
-wpn_mp153_m1:0:6
-wpn_ithacam37_trench:0:6
-wpn_ithacam37_trench:0:6
-wpn_ithacam37_trench:0:6
-wpn_spas12:0:6
-
-wpn_adar2_15:0:6
+wpn_ak74_n:0:6
+wpn_svd_m1:r:3
 wpn_adar2_15:r:6
+wpn_akm_bas:r:r
+wpn_m4a1_siber:r:6:20
+wpn_mosin:r:0
+wpn_k98_mod:0:0
+
+wpn_mp133:0:6
+wpn_ithacam37_trench:0:6
+wpn_mp153_m1:0:6
+wpn_remington870:0:3
+
+[monolith_experienced_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:r:0
+wpn_colt1911:r:0
+wpn_beretta_modern:r:0
+wpn_beretta_modern:r:0
+wpn_walther_p99:r:0
+wpn_walther_p99:r:0
+
+[monolith_professional_primary]
+
+wpn_p90gamma:0:6
+wpn_p90gamma:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:6
+
+wpn_sks_molot:r:3
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_ak105:r:6
+wpn_ak74m_n:r:6
+wpn_svd_m1:r:3
+wpn_adar2_15:r:6
+wpn_akm_bas:r:r
+wpn_m4a1_siber:r:6:20
+wpn_mosin:r:0
+wpn_k98_mod:0:0
+wpn_ak12_custom:r:6
+
+wpn_mp133:0:6
+wpn_ithacam37_trench:0:6
+wpn_mp153_m1:0:6
+wpn_remington870:0:3
+
+[monolith_professional_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:r:0
+wpn_colt1911:r:0
+wpn_beretta_modern:r:0
+wpn_beretta_modern:r:0
+wpn_walther_p99:r:0
+wpn_walther_p99:r:0
+wpn_sig226:r:0
+wpn_sig226:r:0
+wpn_sr1m:r:0
 
 [monolith_veteran_primary]
-wpn_fn2000_nimble:r:6:25
+
+wpn_p90gamma:0:6
+wpn_p90gamma:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:6
+
+wpn_sks_tac:r:3
+wpn_ak74u_tac:0:6
+wpn_ak74u_tac:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak74m_n:r:6
+wpn_m4_ru556:r:6
+wpn_akm_bas:r:r
+wpn_m4a1_siber:r:6:20
+wpn_ak12_custom:r:6lo
+
+wpn_mosin:r:0
 wpn_k98_mod:0:0
-wpn_sv98:0:3
-wpn_svd_m1:0:3
-wpn_svd_m1:0:3
-wpn_svd_m1:3
-wpn_svd_m1:3
-wpn_remington700_magpul_pro:r:3
-wpn_remington700_magpul_pro:r:3
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:0:3
+wpn_svd_m1:r:3
 
-wpn_ash12:r:3
-wpn_vintorez_n1:r:3:10
-wpn_remington700:0:3
-wpn_remington700:r:3
-wpn_svd_m1:3
-wpn_svd_m1:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:4:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_ace52:r:3
-
-wpn_ump45:r:3:25
-wpn_mp5_nimble:r:0:25
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3:15
-wpn_mp7:r:3:25
-wpn_pp2000:4:0
-wpn_pp2000:4:0
-wpn_mp5_custom:4:6
-wpn_mp5_custom:4:6
-wpn_mp5_custom:r:6
-wpn_vz61:r:6
-wpn_vz61:r:6
-wpn_vityaz:r:6
-wpn_vityaz:r:6
-wpn_vityaz:0:6
-
-wpn_9a91:r:3
-wpn_9a91:4:3
-wpn_9a91:0:3
-wpn_9a91:r:3
-wpn_9a91:4:3
-wpn_9a91:0:3
-wpn_vintorez_n1:r:3
-wpn_vintorez_n1:4:3
-wpn_vintorez_n1:0:3
-wpn_groza:0:3
-wpn_groza:r:3
-wpn_groza:4:3
-wpn_vihr:r:3
-wpn_vihr:r:3
-
-wpn_ks23:r:3
-wpn_ks23:r:3
-wpn_saiga12s_m2:0:6
-wpn_saiga12s_m2:4:6
-wpn_saiga12s_m2:r:6
 wpn_mp133:0:6
-wpn_mp153_m1:r:6
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_protecta:0:6
-
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_ak103:0:3
-wpn_ak103:0:3
-
-wpn_m4_ru556:r:6:5
-wpn_m249:r:6:10
-wpn_sig550:r:6:30
-wpn_m4a1_siber:r:6:30
-wpn_ak101:0:6
-wpn_ak101:r:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_ak5c_bas:0:6
-wpn_ak5c_bas:r:6
-wpn_aug_modern:0:6
-wpn_aug_modern:r:6
-wpn_aug_merc:0:6
-wpn_aug_merc:r:6
-wpn_g36ka4_rwap:r:6:50
-wpn_g36ka4_rwap:r:6:50
-wpn_l85_m2:0:6
-wpn_l85_m2:r:6
-wpn_sig550:0:6
-wpn_sig550:r:6
-wpn_sig552:0:6
-wpn_sig552:r:6
-
-wpn_ak74m_n:r:6
-wpn_ak74m_n:4:6
-wpn_rpk74_16:4:6:70
-wpn_rpk74_16:0:6:70
-wpn_ak74m_n:0:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:4:6
-wpn_ak74m_n:0:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:4:6
-wpn_ak101:0:6
-wpn_ak101:r:6
-wpn_ak101:4:6
-wpn_abakan_n:r:6:25
-wpn_abakan_n:4:6:25
-wpn_abakan_n:r:6:25
-wpn_abakan_n:4:6:25
-wpn_ak12_custom:r:6
-wpn_ak12_custom:0:6
-wpn_ak12_custom:r:6
-wpn_ak12_custom:r:6
-wpn_ak12_custom:1:6
-wpn_ak12_custom:4:6
-wpn_abakan_n:0:6
-wpn_abakan_n:4:6
 wpn_ithacam37_trench:0:6
-wpn_ithacam37_trench:0:6
-wpn_spas12:0:6
-
-wpn_adar2_15:0:6
-wpn_adar2_15:r:6
-
-wpn_pkm_siber:0:0
-wpn_pkp_siber:r:0:50
-
+wpn_mp153_m1:0:6
+wpn_remington870:0:3
 
 [monolith_veteran_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_korth:0:0
-wpn_korth_custom:0:0
-wpn_pb_custom:0
+
 wpn_pb_custom:0:0
-wpn_pm_custom:0
 wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_beretta_modern:0:0
-wpn_beretta_modern:0:0
-wpn_colt1911:0:0
-wpn_colt1911_camo:0:0
-wpn_colt1911:0:0
-wpn_colt1911:0:0
-wpn_glock:0:0
-wpn_glock:0:0
-wpn_beretta_modern:0:0
-wpn_walther_p99:0:0
-wpn_walther_p99:0:0
-wpn_sig226:0:0
-wpn_sig226:0:0
-wpn_usp_match:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
-wpn_fn57:0:0
+wpn_tt33_modern:r:0
+wpn_colt1911:r:0
+wpn_beretta_modern:r:0
+wpn_beretta_modern:r:0
+wpn_walther_p99:r:0
+wpn_walther_p99:r:0
+wpn_sig226:r:0
+wpn_sig226:r:0
+wpn_sr1m:r:0
+
+[monolith_expert_primary]
+
+wpn_p90gamma:0:6
+wpn_p90gamma:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:6
+
+wpn_ak74u_tac:0:6
+wpn_ak74u_tac:r:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak104_alfa:r:6
+wpn_ak12_custom:r:6
+wpn_ak12_custom:r:6
+wpn_ak12_custom:r:6
+wpn_ak12_custom:r:6
+wpn_m4_ru556:r:6
+wpn_m4a1_siber:r:6:20
+wpn_groza:r:3
+
+wpn_vintorez_n1:4:3
+wpn_remington700_magpul_pro:r:3
+wpn_svds:r:3
+
+wpn_rpk:0:3
+oado
+wpn_ithacam37_trench:0:6
+wpn_mp153_m1:0:6
+wpn_mp153_m1:0:6
+wpn_remington870:0:3
+wpn_saiga12s_m2:r:6
+
+[monolith_expert_secondary]
+
+wpn_beretta_modern:r:0
+wpn_walther_p99:r:0
+wpn_sig226:r:0
+wpn_oc33:r:0
+wpn_glock_modern:r:0
+wpn_sr1m:r:0
 
 [monolith_master_primary]
-wpn_fn2000_nimble:r:6
-wpn_saiga12s_isg:r:6:10
-wpn_saiga12s_isg:4:6
-wpn_l96a1m:r:0
-wpn_remington700_lapua700:0:0:25
-wpn_ak74m_n:r:3
-wpn_pp2000:r:0
-wpn_val:r:3
-wpn_val:r:3
-wpn_ash12:r:3
-wpn_ash12:r:3
-wpn_akm_alfa:r:3
-wpn_ak12_custom:r:6
-wpn_vihr:r:3
-wpn_vihr:r:3
 
-wpn_remington700:0:3
-wpn_remington700:0:3
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:0:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_ace52:r:3
-
-wpn_ak74_n:4:6
-wpn_ak5c_bas:r:6
-wpn_ak5c_isg:r:6
-wpn_ak101:0:6
-wpn_ak101:r:6
-wpn_ak101:4:6
-wpn_abakan_n:r:6:25
-wpn_abakan_n:r:6:25
-wpn_abakan_n:4:6:25
-wpn_abakan_n:r:6:25
-wpn_ak74_alt:r:6
-wpn_ak74_alt:4:6
-wpn_ak74_alt:0:6
-wpn_ak74_custom:r:6
-wpn_ak74_custom:4:6
-wpn_ak74_custom:0:6
-wpn_abakan_n:0:6
-wpn_abakan_n:4:6
-
-wpn_ump45:r:3
-wpn_mp5_nimble:r:0:25
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-wpn_mp7:r:3:50
-wpn_mp5:r:6
-wpn_mp5sd_custom:r:6
-wpn_vityaz:r:6
-wpn_vityaz:r:6
-
-wpn_m4_ru556:0:6:25
-wpn_m4_ru556:r:6:25
-wpn_m249:r:6:25
-wpn_sig550:r:6:60
-wpn_m4a1_siber:r:6:60
-wpn_ak101:0:6
-wpn_ak101:4:6
-wpn_m4a1_siber:0:6
-wpn_m4_ru556:r:6
-wpn_ak5c_bas:0:6
-wpn_ak5c_bas:4:6
-wpn_aug_modern:0:6
-wpn_aug_modern:4:6
-wpn_aug_merc:0:6
-wpn_aug_merc:4:6
-wpn_g36ka4_rwap:r:6:50
-wpn_g36ka4_rwap:r:6:50
-wpn_l85_m2:0:6
-wpn_l85_m2:4:6
-wpn_sig550:0:6
-wpn_sig550:4:6
-wpn_sig552:0:6
-wpn_sig552:4:6
-
-wpn_dvl10_m1:0:r
-wpn_svd_m1:6
-wpn_mp153_m1:r:6
-wpn_mp153_m1:r:6
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_spas12:r:6:50
-wpn_spas12:0:6:50
-wpn_saiga12s_m2:4:6
-wpn_saiga12s_m2:r:6
-wpn_ks23:r:3
-wpn_ks23:r:3
-wpn_saiga12s_m2:0:6
-wpn_saiga12s_m2:4:6
-wpn_saiga12s_m2:r:6
-wpn_mp153_m1:r:6
-wpn_mp153_m1:0:6
-
-wpn_rpk74_16:0:6:70
-wpn_rpk74_16:r:6:70
-wpn_remington700_magpul_pro:r:3
-wpn_vintorez_n1:r:3:15
-wpn_pkm_siber:0:0
-wpn_pkp_siber:r:0
-
-
-[monolith_master_secondary]
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_mp443:r:0
-wpn_mp443:r:0
-wpn_aps:r:0
-wpn_oc33:r:0
-wpn_pl15:r:0
-wpn_gsh18:r:0
-wpn_gsh18:r:0
-wpn_korth:r:0
-wpn_korth_custom:r:0
-wpn_pb_customr:0
-wpn_pb_custom:r:0
-wpn_pm_customr:0
-wpn_pm_custom:r:0
-wpn_pm_custom:r:0
-wpn_tt33_modern:r:0
-wpn_tt33_modern:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
-wpn_colt1911:r:0
-wpn_mp412:r:0
-wpn_glock:r:0
-wpn_glock:r:0
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_sig226:r:0
-wpn_sig226:r:0
-wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-
-[monolith_legend_primary]
-wpn_fn2000_nimble:r:6
-wpn_saiga12s_isg:r:6:30
-wpn_dvl10:r:3
-wpn_scar_siber:r:3:25
-wpn_scar_siber:r:3
-wpn_vintorez_n1:r:3:25
-wpn_steyr_scout_big:r:3
-
-wpn_p90gamma:r:3:65
-
-wpn_ash12:r:3
-wpn_remington700_magpul_pro:r:3
-
-wpn_l96a1m:0:0
-wpn_l96a1m:0:0
-wpn_remington700_lapua700:0:0
-wpn_dvl10_m1:0:0
-
-wpn_ace52:r:3
-wpn_ace52:r:3
+wpn_p90gamma:0:6
+wpn_p90gamma:0:6
 
 wpn_ak74m_n:r:6
-wpn_val:r:3
-wpn_val:r:3
-wpn_val:r:3
-wpn_vihr:r:3
-
-wpn_svds_pmc:r:3
-wpn_scar_siber:r:3
-;wpn_gauss
+wpn_ak74m_n:r:6
+wpn_ak104_alfa:r:6
 wpn_ak12_custom:r:6
-wpn_ak12_custom:0:6
 wpn_ak12_custom:r:6
-wpn_sig550:r:6
-wpn_sig550:r:6
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_ak103:0:3
-wpn_ak103:r:3
-wpn_akm_alfa:0:3
-wpn_akm_alfa:r:3
-wpn_m4_ru556:0:6
-wpn_ak74_n:4:6
-wpn_ak12_custom:4:6
-wpn_ak12_custom:4:6
-wpn_ak12_custom:4:6
-wpn_m4_ru556:4:6
-wpn_m249:4:6
-wpn_ak5c_isg:4:6
-wpn_saiga12s_isg:4:6
+wpn_ak12_custom:r:6
+wpn_ak12_custom:r:6
+wpn_ak12_custom:r:6
+wpn_fn2000_nimble:r:6
+wpn_val:r:6:20
+wpn_groza:r:3
 
-[monolith_legend_secondary]
-wpn_mp412:0:0
-wpn_mp443:r:0
-wpn_mp443:r:0
-wpn_aps:r:0
-wpn_oc33:r:0
-wpn_pl15:r:0
-wpn_gsh18:r:0
-wpn_gsh18:r:0
-wpn_korth:r:0
-wpn_korth_custom:r:0
-wpn_pb_customr:0
-wpn_pb_custom:r:0
-wpn_pm_customr:0
-wpn_pm_custom:r:0
-wpn_pm_custom:r:0
-wpn_tt33_modern:r:0
-wpn_tt33_modern:r:0
+wpn_vintorez_n1:4:3
+wpn_vintorez_n1:4:3
+wpn_remington700_magpul_pro:r:3
+wpn_svds:r:3
+
+wpn_rpk:0:3
+wpn_rpk74_16:0:6:70
+wpn_pkp_siber:r:0
+
+wpn_mp153_m1:0:6
+wpn_mp153_m1:0:6
+wpn_saiga12s_m2:r:6
+wpn_ks23:0:6
+
+[monolith_master_secondary]
+
 wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_colt1911:r:0
+wpn_walther_p99:r:0
+wpn_sig226:r:0
 wpn_colt1911_camo:r:0
 wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
-wpn_colt1911:r:0
-wpn_mp412:r:0
-wpn_glock:r:0
-wpn_glock:r:0
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_sig226:r:0
-wpn_sig226:r:0
-wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
+wpn_oc33:r:0
+wpn_glock_modern:r:0
+wpn_korth:r:0
+wpn_korth_custom:r:0
+wpn_sr1m:r:0
 
-[monolith_veteran_extra]
-grenade_gd-05:0:1:2
-grenade_rgd5:0:1:2
+[monolith_legend_primary]
+
+wpn_p90gamma:0:6
+wpn_p90gamma:0:6
+
+wpn_ak104_alfa:r:6
+wpn_ak104_alfa:r:6
+wpn_ak12_custom_mono_kit:r:6
+wpn_ak12_custom_mono_kit:r:6
+wpn_ak12_custom_mono_kit:r:6
+wpn_ak12_custom_mono_kit:r:6
+wpn_ak12_custom:r:6
+wpn_fn2000_nimble:r:6
+wpn_val:r:6:20
+wpn_groza:r:3
+wpn_scar_siber:r:3
+
+wpn_vintorez_n1:4:3
+wpn_vintorez_n1:4:3
+wpn_l96a1m:0:0
+wpn_svds_pmc:r:3
+wpn_gauss:r:0
+
+wpn_rpk:0:3
+wpn_rpk74_16:0:6:70
+wpn_pkp_siber:r:0
+
+wpn_mp153_m1:0:6
+wpn_mp153_m1:0:6
+wpn_saiga12s_isg:4:6
+wpn_ks23:0:6
+
+[monolith_legend_secondary]
+
+wpn_colt1911_camo:r:0
+wpn_colt1911_custom:r:0
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
+wpn_korth:r:0
+wpn_korth_custom:r:0
+wpn_sr1m:r:0
