--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -1,4 +1,3 @@
-
 ;; ===========================< Loadout >=============================
 ;; To add items in the item lists:
 ;; -------------------------------
@@ -20,7 +19,7 @@ total_points_eco_1 = 1700
 total_points_eco_2 = 1400
 total_points_eco_3 = 1200
 
-[custom]	
+[custom]
 
 [shared]:custom
 cash = false,1,0
@@ -39,9 +38,15 @@ energy_drink = true,1,20
 kolbasa = true,1,15
 mineral_water = true,2,35
 
+armor_repair_fa = true,3,35
+gun_oil = true,2,50
+leatherman_tool = true,1,250
+grooming = true,1,95
+swiss_knife = true,1,80
+
 device_flashlight = true,1,200
 device_torch_dummy = true,1,300
-device_glowstick = true,4,20
+device_glowstick = true,2,20
 
 wpn_binoc_inv = true,1,100
 
@@ -51,16 +56,16 @@ device_pda_1 = false,1,0
 itm_backpack = false,1,0
 wpn_knife2 = false,1,0
 
-wpn_sks_b = true,1,1200,1
+wpn_sks_b = true,1,1050,1
 wpn_mosin = true,1,750
+wpn_toz34 = true,1,650,2
 wpn_vityaz = true,1,600
 wpn_kiparis = true,1,400
-wpn_toz34_obrez = true,1,600,2
-wpn_toz106_m1 = true,1,400
-wpn_aps = true,1,300
+wpn_toz106_m1 = true,1,300
+wpn_aps = true,1,250
 wpn_colt1911 = true,1,250
-wpn_pm_custom = true,1,150
 wpn_tt33_modern = true,1,200
+wpn_pm_custom = true,1,150
 
 cooking = true,1,25
 yadylin = true,2,50
@@ -75,22 +80,18 @@ ration_ukr = true,1,200,2
 vodka = true,3,150
 cigarettes_russian = true,2,30
 
-armor_repair_fa = true,3,35
-gun_oil = true,2,50
-
 helm_cloth_mask = true,1,5
 helm_rp_bala = true,1,10
 helm_resp = true,1,50
 helm_respirator = true,1,250
 
-novice_outfit = true,1,50
-novice_outfit_camo = true,1,250
-novice_outfit_tourist = true,1,450
+novice_outfit_tourist = true,1,50
+redline_novice_outfit = true,1,250
 stalker_outfit = true,1,500
 
 detector_geiger = true,1,200
 detector_radio = true,1,200
-detector_simple = true,1,450
+detector_simple = true,1,250
 
 [bandit_loadout]:shared
 bandit_patch = false,1,0
@@ -114,8 +115,8 @@ wpn_colt1911 = true,1,200
 wpn_pm_custom = true,1,125
 
 bandit_novice_outfit = true,1,50
+trenchcoat_outfit = true,1,250
 banditmerc_outfit = true,1,500
-trenchcoat_brown_outfit = true,1,850
 
 cooking = true,1,25
 yadylin = true,2,50
@@ -221,7 +222,7 @@ nbc_dolg_outfit = true,1,650
 
 [freedom_loadout]:shared
 freedom_patch = false,1,0
-wpn_knife1 = false,1,0
+wpn_knife = false,1,0
 device_pda_1 = false,1,0
 itm_backpack = false,1,0
 
@@ -270,16 +271,15 @@ helm_rp_bala = true,1,10
 helm_resp = true,1,50
 helm_respirator_old = true,1,250
 
-wpn_m4_ru556 = true,1,1000,1
+wpn_m4_ru556 = true,1,1050,1
 wpn_K98_mod = true,1,850,2
 wpn_mp5sd_custom = true,1,500
-wpn_mp5 = true,1,375
 wpn_toz34 = true,1,450
+wpn_mp5 = true,1,375
 wpn_toz106_m1 = true,1,300
-
-wpn_beretta_modern = true,1,200
-wpn_usp = true,1,250
 wpn_fn57 = true,1,325
+wpn_usp = true,1,250
+wpn_beretta_modern = true,1,200
 
 yadylin = true,2,50
 drug_sleepingpills = true,2,75
@@ -308,7 +308,7 @@ helm_rp_bala = true,1,10
 helm_resp = true,1,15
 helm_respirator_old = true,1,50
 
-wpn_ak74u_n1 = true,1,1000,1
+wpn_ak74u_n1 = true,1,1050,1
 wpn_sks_b = true,1,850,2
 wpn_vityaz = true,1,500
 wpn_bizon = true,1,400
@@ -342,17 +342,18 @@ equ_small_pack = false,1,0
 helm_cloth_mask = true,1,5
 helm_rp_bala = true,1,10
 helm_resp = true,1,15
-helm_ranger = true,1,50 
+helm_respirator_old = true,1,50
+helm_ranger = true,1,250
 
-wpn_ak12_custom = true,1,700,1
+wpn_ak12_custom = true,1,1050,1
+wpn_sks_b = true,1,900,2
 wpn_mosin = true,1,850
-wpn_sks_b = true,1,900
 wpn_pp2000 = true,1,500
-wpn_kiparis = true,1,300
 wpn_toz106_m1 = true,1,375
+wpn_kiparis = true,1,300
 wpn_colt1911 = true,1,200
-wpn_pm_custom = true,1,125
 wpn_beretta_modern = true,1,200
+wpn_pm_custom = true,1,125
 
 cooking = true,1,25
 yadylin = true,2,50
@@ -372,7 +373,7 @@ ration_ukr = true,1,200,2
 vodka = true,3,120
 
 monolith_nbc_outfit = true,1,50
-monolith_trenchcoat_outfit = true,1,400
+monolith_trenchcoat_outfit = true,1,350
 
 [csky_loadout]:shared
 csky_patch = false,1,0
@@ -385,16 +386,15 @@ helm_rp_bala = true,1,10
 helm_resp = true,1,50
 helm_respirator_old = true,1,250
 
-wpn_adar2_15 = true,1,1050,2
-wpn_winchester1873 = true,1,600
+wpn_adar2_15 = true,1,1050,1
+wpn_winchester1873 = true,1,750
 wpn_mp5 = true,1,500
 wpn_vz61 = true,1,375
-wpn_bm16 = true,1,550,2
+wpn_bm16 = true,1,550
 wpn_toz106_m1 = true,1,375
-wpn_usp = true,1,250
-
-wpn_beretta_modern = true,1,200
 wpn_mp412 = true,1,325
+wpn_usp = true,1,250
+wpn_beretta_modern = true,1,200
 
 cooking = true,1,25
 yadylin = true,2,50
@@ -425,13 +425,16 @@ wpn_knife = false,1,0
 device_pda_1 = false,1,0
 equ_small_pack = false,1,0
 
-helm_resp = true,1,50 
+helm_cloth_mask = true,1,5
+helm_rp_bala = true,1,10
+helm_resp = true,1,50
+helm_respirator_old = true,1,250
 
-wpn_sks_b = true,1,1000,1
-wpn_mosin = true,1,1050
+wpn_sks_b = true,1,1050,1
+wpn_mosin = true,1,850
+wpn_toz34_obrez = true,1,550
 wpn_vityaz = true,1,500
 wpn_kiparis = true,1,300
-wpn_toz34_obrez = true,1,550,2
 wpn_toz106_m1 = true,1,375
 wpn_aps = true,1,200
 wpn_colt1911 = true,1,200
@@ -441,18 +444,18 @@ cooking = true,1,25
 yadylin = true,2,50
 drug_sleepingpills = true,2,75
 antirad_cstamine = true,2,50
-antirad_kalium = true,3,175
-medkit = true,3,150
-joint = true,4,90
+antirad_kalium = true,1,125
+medkit = true,2,125
+joint = true,5,90
 brewed_coffee = true,2,85
 ration_ukr = true,1,200,2
 vodka = true,3,150
 cigarettes_russian = true,2,30
-cocaine = true,1,375
+cocaine = true,3,275
 drug_booster = true,1,250
 
 redline_novice_outfit = true,1,50
-banditmerc_outfit = true,1,500
+trenchcoat_outfit = true,1,150
 
 [greh_loadout]:shared
 af_fire_loop = false,1,0
@@ -463,12 +466,12 @@ equ_small_pack = false,1,0
 
 helm_ranger = true,1,50 
 
-wpn_sks_b = true,1,1000,1
-wpn_mosin = true,1,1050
+wpn_sks_b = true,1,1050,1
 wpn_toz34_mark4_23 = true,1,900
+wpn_mosin = true,1,850
 wpn_vityaz = true,1,500
 wpn_kiparis = true,1,300
-wpn_toz34_obrez = true,1,550,2
+wpn_toz34_obrez = true,1,550
 wpn_toz106_m1 = true,1,375
 wpn_aps = true,1,200
 wpn_colt1911 = true,1,200
@@ -498,8 +501,8 @@ itm_backpack = false,1,0
 device_pda_3 = true,1,300 
 
 helm_respirator_gp5 = true,1,50
-
 helm_ach7ex = true,1,200 
+
 wpn_mossberg590 = true,1,1050
 wpn_aug_freedom = true,1,400
 wpn_mp5sd = true,1,650
