--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_csky.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_csky.ltx
@@ -178,11 +178,11 @@ wpn_mp7:r:0:25
 wpn_mp7:r:0:25
 
 wpn_adar2_15:0:0
-wpn_m4_ru556:0:0        
-wpn_sig552:0:0
-wpn_sig552:0:0
-wpn_sig550:0:0
-wpn_ak105:0:0
+wpn_m4_ru556:r:0
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_ak105:r:0
 wpn_winchester1873:0:0:75
 wpn_winchester1873:0:0:75
 
@@ -214,11 +214,11 @@ wpn_mp7:r:0:25
 wpn_mp7:r:0:25
 
 wpn_adar2_15:0:0
-wpn_m4_ru556:0:0        
-wpn_sig552:0:0
-wpn_sig552:0:0
-wpn_sig550:0:0
-wpn_ak105:0:0
+wpn_m4_ru556:r:0
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_ak105:r:0
 wpn_ak105:0:0
 wpn_winchester1873:0:0:75
 wpn_winchester1873:0:0:75
@@ -250,14 +250,14 @@ wpn_pp2000:0:0
 wpn_mp7:r:0:25
 wpn_mp7:r:0:25
 
-wpn_m4_ru556:0:0        
-wpn_sig552:0:0
-wpn_sig552:0:0
-wpn_sig550:0:0
-wpn_sig550:0:0
-wpn_ak105:0:0
-wpn_ak105:0:0
-wpn_ak105:0:0
+wpn_m4_ru556:r:0
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_sig550:r:0
+wpn_ak105:r:0
+wpn_ak105:r:0
+wpn_ak105:r:0
 wpn_winchester1873:0:0:75
 wpn_fal_sa58_osw:r:0
 wpn_l96a1m:r:0:75
