--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_renegade.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_renegade.ltx
@@ -1,343 +1,467 @@
+; Ideally to be a weird mashup of Duty, Clear Sky and Mercs mostly to get more NATO weapons out there. - [Ted]
+[renegade]:stalker
 
-[renegade_novice]:stalker_novice
+[renegade_novice]:renegade
 primary = renegade_novice_primary
-; secondary = renegade_experienced_secondary
+secondary = renegade_novice_secondary
+extra = extras_novice
 
-[renegade_trainee]:renegade_novice
+[renegade_trainee]:renegade
+primary = renegade_trainee_primary
+secondary = renegade_trainee_primary
+extra = extras_trainee
 
-[renegade_experienced]:stalker_experienced
+[renegade_experienced]:renegade
 primary = renegade_experienced_primary
-; secondary = renegade_experienced_secondary
+secondary = renegade_experienced_secondary
+extra = extras_experienced
 
-[renegade_professional]:renegade_experienced
+[renegade_professional]:renegade
+primary = renegade_professional_primary
+secondary = renegade_professional_secondary
+extra = extras_professional
 
-[renegade_veteran]:stalker_veteran
+[renegade_veteran]:renegade
 primary = renegade_veteran_primary
 secondary = renegade_veteran_secondary
+extra = extras_veteran
 
-[renegade_expert]:renegade_veteran
+[renegade_expert]:renegade
+primary = renegade_expert_primary
+secondary = renegade_expert_secondary
+extra = extras_expert
 
-[renegade_master]:stalker_master
+[renegade_master]:renegade
 primary = renegade_master_primary
 secondary = renegade_master_secondary
+extra = extras_master
 
-[renegade_legend]:renegade_master
+[renegade_legend]:renegade
+primary = renegade_legend_primary
+secondary = renegade_legend_secondary
+extra = extras_legend
 
 ;----------------------------------------------------
+
 [renegade_novice_primary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
 
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
 wpn_vz61:0:0
-
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
-wpn_bm16_full:0:3
-wpn_toz34:0:3
-wpn_toz34:0:3
-wpn_toz106_m1:0:0
-wpn_toz106_m1:0:0
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
-wpn_vz61:0:0
-
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
-wpn_bm16_full:0:3
-wpn_toz34:0:3
-wpn_toz34:0:3
-wpn_toz106_m1:0:0
-wpn_toz106_m1:0:0
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_wincheaster1300:0:3
-
-wpn_ppsh41:0:3
-wpn_ppsh41:0:3
-wpn_ppsh41:0:3
-
-wpn_sks_b:r:0
-wpn_sks_b:r:0
-wpn_sks_b:r:0
-
-wpn_mosin:r:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_k98:0:0
-wpn_k98:0:0
-
-wpn_winchester1873:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
 
 wpn_adar2_15:0:0
-wpn_adar2_15:r:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_toz106_m1:0:3
+wpn_protecta:0:3
+wpn_protecta:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+
+[renegade_novice_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+
+[renegade_trainee_primary]
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_remington870:0:3
+
+[renegade_trainee_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
 
 [renegade_experienced_primary]
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
-wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
-wpn_ak74_n:0:0
-wpn_ak105:r:0
 
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
 wpn_vz61:0:0
-wpn_bizon:r:0
-wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
-wpn_sks_b:r:0
-wpn_sks_b:0:0
-wpn_sks_molot:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:r:0
-
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svd_m1:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-wpn_k98:0:0
-wpn_k98:0:0
-
-wpn_toz34_mark4_23:0:0
-wpn_winchester1873:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
 
 wpn_adar2_15:0:0
-wpn_adar2_15:r:0
-
-;[renegade_experienced_secondary]
-
-[renegade_veteran_primary]
-wpn_k98_mod:0:0
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
+wpn_adar2_15:0:0
 wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
-wpn_ak74_n:0:0
-wpn_ak105:r:0
-
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
-wpn_vz61:0:0
-wpn_bizon:r:0
-wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-
-wpn_ump45:r:3:25
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
-wpn_sks_b:r:0
+wpn_ak74u_n1:0:0
 wpn_sks_b:0:0
-wpn_sks_molot:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_rpk:r:0
-wpn_rpk:0:0
-
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svd_m1:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-
-wpn_vintorez_n1:r:0
-wpn_vintorez_n1:r:0
-wpn_vintorez_n1:r:0
-wpn_9a91:r:0
-
-wpn_toz34_mark4_23:0:0
-
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
+wpn_sks_b:0:0
 wpn_sig552:0:0
-wpn_winchester1873:0:0
+wpn_m4_ru556:r:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_ak74_n:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
 
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_remington870:0:3
+wpn_mp133:0:3
 
-[renegade_veteran_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
+[renegade_experienced_secondary]
+
 wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
 
+[renegade_professional_primary]
 
-[renegade_master_primary]
-wpn_ace52:r:0:75
-wpn_ithacam37_trench:0:6
-wpn_k98_mod:0:0
-wpn_saiga12s_isg:r:6:5
-wpn_ash12:r:0
-wpn_ks23:r:3
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3:10
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_ump45:0:3
 
-wpn_ump45:r:3
-
-wpn_ak74m_n:r:0
-wpn_rpk74_16:r:0:60
-wpn_ak12_m1:r:0
-wpn_ak12_m1:0:6
-wpn_abakan_n:r:0:50
-wpn_ak105:r:0
-wpn_abakan_n:r:0
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
 wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_sig552:0:0
+wpn_m4_ru556:0:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
 wpn_ak74_n:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
 
-wpn_bizon:r:0
-wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
 wpn_protecta_aim:0:3
-wpn_spas12:0:3:25
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
 
-wpn_sks_molot:r:0
-wpn_sks_b:r:0
+[renegade_professional_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_aps:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+
+[renegade_veteran_primary]
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:0:6
+wpn_ump45:0:3
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
 wpn_sks_b:0:0
 wpn_sks_molot:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_rpk:r:0
-wpn_rpk:0:0
-wpn_ak103:r:0
-wpn_ak103:0:0
-wpn_ak103:r:0
-wpn_sks_tac:r:0
-wpn_rpk:r:0
-
-wpn_svd_m1:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-wpn_svd_m1:r:0
-
-wpn_vintorez_n1:r:0
-wpn_vintorez_n1:r:0
-wpn_vintorez_n1:r:0
-wpn_9a91:r:0
-wpn_9a91:r:0
-wpn_9a91:r:0
-wpn_vihr:r:3:50
-wpn_val:r:0
-wpn_val:r:0
-
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:r:0
-wpn_sig550:0:0
 wpn_sig552:0:0
-wpn_g36ka4_rwap:r:6:50
-wpn_g36ka4_rwap:r:6:50
+wpn_sig552:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74_n:0:0
+wpn_ak74m_n:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:r:0:50
 
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_remington700:0:0
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+
+[renegade_veteran_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock:0:0
+
+[renegade_expert_primary]
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:0
+wpn_ump45:0:3
+wpn_mp7:0:0:25
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_molot:0:0
+wpn_sks_molot:0:0
+wpn_sig552:0:0
+wpn_sig552:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:r:0:50
+
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_remington700:0:0
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
+wpn_mp153_m1:0:3
+
+[renegade_expert_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock:0:0
+
+[renegade_master_primary]
+
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:0
+wpn_ump45:0:3
+wpn_mp7:0:0:25
+wpn_mp7:0:0:25
+
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_molot:0:0
+wpn_sks_molot:0:0
+wpn_sig552:0:0
+wpn_sig552:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:0:0:50
+wpn_scar_siber:0:3:25
+
+wpn_winchester1873:0:0:75
+wpn_k98:r:0
+wpn_remington700:r:0
+
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
+wpn_mp153_m1:0:3
 
 [renegade_master_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
 wpn_mp412:0:0
-wpn_mp443:r:0
-wpn_aps:r:0
-wpn_oc33:r:0
-wpn_pl15:r:0
-wpn_gsh18:r:0
-wpn_gsh18:r:0
-wpn_pb_customr:0
-wpn_pb_custom:r:0
-wpn_pm_customr:0
-wpn_pm_custom:r:0
-wpn_pm_custom:r:0
-wpn_tt33_modern:r:0
-wpn_tt33_modern:r:0
-wpn_colt1911:r:0
-wpn_fn57:r:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock:0:0
+wpn_glock_modern:0:0
+wpn_fn57:0:0
+wpn_sr1m:0:0
+
+[renegade_legend_primary]
+
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_mp5_nimble:0:0
+wpn_mp5_nimble:0:0
+wpn_mp5_nimble:0:0
+wpn_ump45:0:3
+wpn_mp7:0:0:25
+wpn_mp7:0:0:25
+
+wpn_ak74u_tac:0:0
+wpn_sks_molot:0:0
+wpn_sks_tac:0:0
+wpn_sig550:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:0:0:50
+wpn_scar_siber:0:3:25
+wpn_scar_siber:0:3:25
+wpn_scar_siber:0:3:25
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_ash12:0:3
+
+wpn_winchester1873:0:0:75
+wpn_k98:r:0
+wpn_remington700:r:0
+
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
+wpn_mp153_m1:0:3
+
+[renegade_legend_secondary]
+
+wpn_oc33:0:0
+wpn_oc33:0:0
+wpn_colt1911_camo:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock_modern:0:0
+wpn_glock_modern:0:0
+wpn_fn57:0:0
+wpn_sr1m:0:0
