- ISG NPC Loadouts: Update
Fixes some Sin issues also and changes starting locations.

--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_greh.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_greh.ltx
@@ -19,15 +19,13 @@ extra = extras_experienced
 
 [greh_professional]:greh
 primary = greh_professional_primary
-extra = extras_veteran
+secondary = greh_professional_secondary
 extra = extras_professional
 
 [greh_veteran]:greh
 primary = greh_veteran_primary
 secondary = greh_veteran_secondary
 extra = extras_veteran
-;ammo_1  =  ammo_primary_veteran
-;ammo_2  =  ammo_secondary_veteran
 
 [greh_expert]:greh
 primary = greh_expert_primary
@@ -253,6 +251,51 @@ wpn_toz34_mark4_23:0:3
 wpn_toz34_mark4_23:0:3
 
 [greh_veteran_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_gsh18:0:0
+wpn_gsh18:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+
+[greh_expert_primary]
+
+wpn_pp2000:r:0
+
+wpn_sks_b:r:3
+wpn_akm_bas:r:3
+wpn_ak74u_n1:r:6
+wpn_ak74u_n1:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:0:6
+wpn_ak74_n:r:6
+wpn_ak74_n:0:6
+wpn_abakan_n:0:6:50
+
+wpn_rpk:r:3
+wpn_pkm_siber:0:0
+wpn_pkp_siber:0:0
+
+wpn_groza:r:3
+wpn_groza_nimble:r:6:30
+wpn_9a91:r:3
+wpn_val:0:3
+
+wpn_remington700_magpul_pro:r:3
+wpn_remington700_magpul_pro:r:3
+wpn_svds:3
+
+wpn_saiga12s_m2:r:6
+wpn_ks23:r:3
+
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
+
+[greh_expert_secondary]
 
 wpn_aps:0:0
 wpn_oc33:0:0
