--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_isg.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_isg.ltx
@@ -1,294 +1,330 @@
 
 [isg]:stalker
 
-[isg_novice]:stalker_novice
-primary = isg_primary
-secondary = isg_secondary
+[isg_novice]:isg
+primary = isg_novice_primary
+secondary = isg_novice_secondary
+extra = extras_novice
 
-[isg_experienced]:stalker_experienced
-primary = isg_primary
-secondary = isg_secondary
+[isg_trainee]:isg
+primary = isg_trainee_primary
+secondary = isg_trainee_secondary
+extra = extras_trainee
 
-[isg_veteran]:stalker_veteran
+[isg_experienced]:isg
+primary = isg_experienced_primary
+secondary = isg_experienced_secondary
+extra = extras_experienced
+
+[isg_professional]:isg
+primary = isg_professional_primary
+secondary = isg_professional_secondary
+extra = extras_professional
+
+[isg_veteran]:isg
 primary = isg_veteran_primary
 secondary = isg_veteran_secondary
+extra = extras_veteran
 
-[isg_master]:stalker_master
+[isg_expert]:isg
+primary = isg_expert_primary
+secondary = isg_expert_secondary
+extra = extras_expert
+
+[isg_master]:isg
 primary = isg_master_primary
 secondary = isg_master_secondary
+extra = extras_master
 
-[isg_trainee]:isg_novice
-
-[isg_professional]:isg_experienced
-
-[isg_expert]:isg_veteran
-
-[isg_legend]:isg_master
+[isg_legend]:isg
+primary = isg_legend_primary
+secondary = isg_legend_secondary
+extra = extras_legend
 
 ;----------------------------------------------------
-[isg_primary]
-wpn_fn2000_nimble:r:6
-wpn_m249:0:6
-wpn_m249:0:6
-wpn_m249:0:6
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_ace52:r:3
-wpn_ace52:r:3
-wpn_ace52:r:3
-wpn_ace52:r:3
-wpn_ash12:r:3
-wpn_ash12:0:3
-wpn_ash12:r:3
-wpn_ash12:0:3
 
-wpn_remington700:r:3
-wpn_remington700:r:3
-wpn_remington700:r:3
-wpn_dvl10:r:3
-wpn_dvl10:r:3
-wpn_l96a1m:r:0
-wpn_l96a1m:r:0
-wpn_steyr_scout_big:r:3
-wpn_dvl10_m1:r:0
-wpn_dvl10_m1:r:0
+[isg_novice_primary]
 
-wpn_ump45:r:3
-wpn_ump45:r:3
-wpn_mp5_nimble:r:0
-wpn_ak5c_bas:r:6
-wpn_ak5c_bas:0:6
-wpn_m4a1_siber:r:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_aug_modern_a3_custom_bas:r:6
-
-wpn_akm_alfa:r:3:40
-wpn_ak103:r:3:60
-wpn_ak103:r:3:60
-
-wpn_p90gamma:r:3
+wpn_mp5:r:6
+wpn_mp5:r:6
+wpn_mp5sd_custom:r:6
 wpn_mp7:r:3
 
-wpn_spas12:0:6
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_ithacam37_trench:0:6
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_ak5c_bas:r:6
 
-wpn_sig552:0:0
-wpn_sig552:0:0
-wpn_sig550:r:0
+wpn_remington700_archangel:r:0
 
-[isg_secondary]
+wpn_mossberg590:r:0
+
+[isg_novice_secondary]
+
 wpn_sig226:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
 wpn_glock:r:0
-wpn_glock_modern:r:0:25
 wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_mp443:r:0
 wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+
+[isg_trainee_primary]
+
+wpn_mp5:r:6
+wpn_mp5sd_custom:r:6
+wpn_mp5sd_custom:r:6
+wpn_mp7:r:3
+
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_ak5c_bas:r:6
+wpn_ak5c_bas:r:6
+wpn_ak5c_bas:r:6
+
+wpn_remington700_archangel:r:0
+
+wpn_mossberg590:r:0
+wpn_spas12:r:0
+
+[isg_trainee_secondary]
+
+wpn_sig226:r:0
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_beretta_modern:r:0
+wpn_usp_match:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+
+[isg_experienced_primary]
+
+wpn_mp5:r:6
+wpn_mp5sd_custom:r:6
+wpn_mp5sd_custom:r:6
+wpn_mp7:r:3
+
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_ak5c_bas:r:6
+wpn_ak5c_bas:r:6
+wpn_ak5c_isg:r:6
+
+wpn_remington700_archangel:r:0
+
+wpn_mossberg590:r:0
+wpn_spas12:r:0
+
+[isg_experienced_secondary]
+
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_glock_modern:r:0
+wpn_beretta_modern:r:0
+wpn_usp_match:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
+
+[isg_professional_primary]
+
+wpn_mp5sd_custom:r:6
+wpn_mp5sd_custom:r:6
+wpn_mp5_nimble:r:0
+wpn_mp7:r:3
+wpn_p90gamma:r:3
+
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_fal_sa58_osw:r:3
+
+wpn_remington700_archangel:r:0
+wpn_l96a1m:r:0
+wpn_remington700_lapua700:r:0
+
+wpn_remington870:r:0
+wpn_spas12:r:0
+
+[isg_professional_secondary]
+
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_glock_modern:r:0
+wpn_beretta_modern:r:0
+wpn_usp_match:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 
 [isg_veteran_primary]
-wpn_fn2000_nimble:r:6
-wpn_remington700_lapua700:r:0
-wpn_remington700_lapua700:r:0
-wpn_saiga12s_isg:r:6:25
-wpn_l96a1m:r:0
-wpn_l96a1m:r:0
-wpn_l96a1m:r:0
-wpn_steyr_scout_big:r:3
-wpn_dvl10_m1:r:0
-wpn_dvl10_m1:r:0
-wpn_dvl10_m1:r:0
-wpn_ash12:r:3
-wpn_ash12:0:3
 
-wpn_p90gamma:r:3:75
-
-wpn_ump45:r:3
+wpn_mp5sd_custom:r:6
+wpn_mp5sd_custom:r:6
 wpn_mp5_nimble:r:0
-wpn_m4_ru556:r:6:40
-wpn_ak5c_isg:r:6:40
-
-wpn_m249:0:6
-wpn_m249:r:6
-wpn_m249:0:6
-wpn_m249:r:6
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-wpn_fal_sa58_osw:r:3
-wpn_ace52:r:3
-wpn_ace52:r:3
-wpn_ace52:r:3
-wpn_ace52:r:3
-
-wpn_ak5c_bas:r:6
-wpn_ak5c_bas:0:6
-wpn_m4a1_siber:r:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:r:6
-wpn_aug_modern_a3_custom_bas:r:6
-
-wpn_ak12_m1:r:6:40
-wpn_ak12_m1:r:6:40
-wpn_akm_alfa:r:3:40
-
-wpn_scar_siber:r:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:0:3
-
-wpn_remington700:r:3
-wpn_dvl10:r:3
-wpn_p90gamma:r:3
 wpn_mp7:r:3
+wpn_p90gamma:r:3
 
-wpn_spas12:0:6
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_saiga12s_isg:r:6:60
-wpn_ithacam37_trench:0:6
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_fal_sa58_osw:r:3
+wpn_fal_sa58_osw:r:3
+wpn_scar_siber:r:3
 
-wpn_sig550:r:0
-wpn_sig550:r:0
+wpn_remington700_archangel:r:0
+wpn_l96a1m:r:0
+wpn_l96a1m:r:0
+wpn_remington700_lapua700:r:0
+
+wpn_remington870:r:0
+wpn_remington870:r:0
+wpn_spas12:r:0
+wpn_spas12:r:0
+wpn_saiga12s_isg:r:0
 
 [isg_veteran_secondary]
+
 wpn_sig226:r:0
-wpn_sig220_n:r:0
 wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_mp412:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_mp443:r:0
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
 wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_korth:r:0
-wpn_korth:r:0
-wpn_korth_custom:r:0
-wpn_korth_custom:r:0
 
+[isg_expert_primary]
 
-[isg_master_primary]
-wpn_fn2000_nimble:r:6
-wpn_remington700_lapua700:r:0
-wpn_remington700_lapua700:r:0
-wpn_saiga12s_isg:r:6
-wpn_l96a1m:r:0
-wpn_l96a1m:r:0
-wpn_l96a1m:r:0
-
-wpn_gauss:r:0
-
+wpn_mp5sd_custom:r:6
+wpn_mp5_nimble:r:0
+wpn_mp5_nimble:r:0
+wpn_mp7:r:3
+wpn_mp7:r:3
 wpn_p90gamma:r:3
+wpn_kriss_vector:r:3
 
-wpn_ash12:r:3
-wpn_ash12:0:3
+wpn_m4a1_siber:r:0
+wpn_fn2000_nimble:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_fal_sa58_osw:r:3
+wpn_fal_sa58_osw:r:3
+wpn_scar_siber:r:3
+wpn_scar_siber:r:3
 
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_ak5c_isg:r:6
-wpn_ak5c_isg:r:6
-wpn_ak5c_isg:r:6
-wpn_m249:0:6
 wpn_m249:r:6
 
-wpn_vintorez_n1:r:3
-wpn_vintorez_n1:r:3
-wpn_vintorez_n1:r:3
+wpn_remington700_archangel:r:0
+wpn_l96a1m:r:0
+wpn_l96a1m:r:0
+wpn_remington700_lapua700:r:0
 
-wpn_saiga12s_isg:r:6
-wpn_saiga12s_isg:r:6
-wpn_saiga12s_isg:r:6
+wpn_remington870:r:0
+wpn_spas12:r:0
+wpn_spas12:r:0
+wpn_saiga12s_isg:r:0
 
-wpn_groza_nimble:r:6:30
+[isg_expert_secondary]
+
+wpn_sig226:r:0
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+wpn_korth:r:0
+wpn_korth:r:0
+
+[isg_master_primary]
+
+wpn_mp5_nimble:r:0
+wpn_mp7:r:3
+wpn_mp7:r:3
+wpn_p90gamma:r:3
+wpn_p90gamma:r:3
+wpn_kriss_vector:r:3
+
+wpn_fn2000_nimble:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_ak5c_isg:r:6
+wpn_fal_sa58_osw:r:3
+wpn_fal_sa58_osw:r:3
+wpn_scar_siber:r:3
+wpn_scar_siber:r:3
+
+wpn_m249:r:6
+
+wpn_remington700_archangel:r:0
+wpn_l96a1m:r:0
+wpn_l96a1m:r:0
+wpn_remington700_lapua700:r:0
+wpn_gauss:r:0
+
+wpn_spas12:r:0
+wpn_saiga12s_isg:r:0
+wpn_saiga12s_isg:r:0
 
 [isg_master_secondary]
-wpn_sig226:r:0
-wpn_sig220_n:r:0
-wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_mp412:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_mp443:r:0
-wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
+
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_korth:r:0
-wpn_korth:r:0
-wpn_korth:r:0
 wpn_korth_custom:r:0
 wpn_korth_custom:r:0
+
+[isg_legend_primary]
+
+wpn_fn2000_nimble:r:6
+wpn_fn2000_nimble:r:6
+wpn_fn2000_nimble:r:6
+wpn_ak5c_bas_5c_tik:r:6
+wpn_ak5c_bas_5c_tik:r:6
+wpn_ak5c_bas_5c_tik:r:6
+wpn_fal_sa58_osw:r:3
+wpn_fal_sa58_osw:r:3
+wpn_scar_siber:r:3
+wpn_scar_siber:r:3
+
+wpn_m249:r:6
+
+wpn_l96a1m:r:0
+wpn_remington700_lapua700:r:0
+wpn_gauss:r:0
+
+wpn_saiga12s_isg:r:0
+
+[isg_legend_secondary]
+
+wpn_glock_modern:r:0
+wpn_fn57:r:0
 wpn_korth_custom:r:0
+wpn_mp7:r:3
+wpn_p90gamma:r:3
+wpn_kriss_vector:r:3
