--- a/gamedata/configs/plugins/new_game_start_locations.ltx
+++ b/gamedata/configs/plugins/new_game_start_locations.ltx
@@ -36,7 +36,7 @@ makeshift_barracks     = l05_bar,true
 
 [freedom_start_locations]
 military_base          = l07_military,true
-abandoned_school       = l09_deadcity,true
+northern_factory       = l04_darkvalley,true
 truck_cemetery_bandits_post = k02_trucks_cemetery,true
 
 [killer_start_locations]
@@ -52,8 +52,8 @@ lodging_house          = l05_bar,true
 [monolith_start_locations]
 cultural_center        = l11_pripyat,true
 brain_scorcher         = l10_radar,true
-power_station          = l12_stancia
 kbo_monolith           = pripyat,true
+power_station          = l12_stancia
 
 [greh_start_locations]
 red_forest_old_mine    = l10_red_forest,true
@@ -63,7 +63,8 @@ l13_generators         = l12_stancia,true
 
 [isg_start_locations]
 dasc_sawwill           = l01_escape,true
-sports_center          = l09_deadcity
+sports_center          = l09_deadcity,true
+construction_site      = l06_rostok,true
 
 [renegade_start_locations]
 northern_factory       = l04_darkvalley,true
